...
    <string name="cart_quantity">Adet: %1$d</string>
    <string name="cart_open_product">&#220;r&#252;n&#252; a&#231;</string>
    <string name="cart_remove">Kald&#305;r</string>
    <string name="cart_subtotal">Ara toplam</string>
    <string name="cart_estimated_total">Tahmini toplam</string>
    <string name="cart_totals_estimate_notice">Tutarlar son sepet güncellemesine dayanır. Fiyat ve uygunluk ödeme adımında değişebilir.</string>
    <string name="cart_server_adjustment">Shopify sepeti g&#252;ncel fiyat veya uygunluk kurallar&#305;na g&#246;re ayarlad&#305;.</string>
    <string name="cart_discard">Bu cihazdan kald&#305;r</string>
    <string name="cart_discard_title">Bu sepet bu cihazdan kald&#305;r&#305;ls&#305;n m&#305;?</string>
    <string name="cart_discard_message">Yaln&#305;zca bu cihazdaki korunan sepet ba&#287;lant&#305;s&#305; kald&#305;r&#305;l&#305;r. Uzak sepet Shopify taraf&#305;nda s&#252;resi dolana kadar kalabilir.</string>
    <string name="cart_discard_confirm">Cihazdan kald&#305;r</string>
    <string name="cart_error_connection">Sepet yenilenemedi. Ba&#287;lant&#305;n&#305;z&#305; kontrol edip yeniden deneyin; son ge&#231;erli sepet korunur.</string>
    <string name="cart_error_not_retained">Sepetin eksiksiz ve g&#252;ncel hali g&#246;sterilemedi. Mevcut bir sepet g&#246;sterilmez veya varsay&#305;lmaz; yenilemek i&#231;in tekrar deneyin.</string>
...
    <string name="account_notice_cart_protected">Sepetiniz do&#287;rulan&#305;rken ge&#231;ici olarak kullan&#305;lam&#305;yor. Hi&#231;bir veri a&#231;&#305;&#287;a &#231;&#305;kar&#305;lmad&#305; veya &#246;deme ad&#305;m&#305;na g&#246;nderilmedi.</string>
    <string name="account_notice_cart_reconciliation">Hesap de&#287;i&#351;ikli&#287;inden sonra sepetiniz g&#252;ncellenemedi. Sepet koruma alt&#305;nda tutuluyor.</string>
    <string name="account_failure_discovery">G&#252;venli giri&#351; a&#231;&#305;lamad&#305;. Yeniden deneyin.</string>
    <string name="account_failure_callback">Giri&#351; tamamlanamad&#305;. Oturum olu&#351;turulmad&#305;.</string>
    <string name="account_failure_connection">Hesab&#305;n&#305;z g&#252;ncellenemedi. Ba&#287;lant&#305;n&#305;z&#305; kontrol edip yeniden deneyin.</string>
    <string name="account_failure_session">Oturumunuz do&#287;rulanamad&#305;. Yeniden giri&#351; yap&#305;n.</string>
    <string name="account_failure_secure_storage">G&#252;venli oturum depolama alan&#305;na eri&#351;ilemiyor. L&#252;tfen yeniden deneyin.</string>
    <string name="account_failure_service">Hesap bilgileri &#351;u anda kullan&#305;lam&#305;yor. Yeniden deneyin.</string>
    <string name="account_manage_addresses">Adresler</string>
    <string name="address_list_title">Adresler</string>
    <string name="address_list_heading">Kay&#305;tl&#305; adresleriniz</string>
    <string name="address_market_explanation">Desteklenen bölgedeki adreslerinizi burada yönetin. Adresler hesabınıza kaydedilir; bu cihazda kalıcı olarak tutulmaz.</string>
    <string name="address_create">Yeni adres ekle</string>
...
